--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -25,13 +25,13 @@ The `corpus.list` computed by `codexplor::construct_corpus` have some `data.fram
 In the `files.network` (one of the `citations.network` of `internal.dependencies` from the `corpus.list`), links start from the programming file that calls a function and point to the programming file where the function is defined.
 
 ### Example
-Given folders path(s) and/or github repo(s), compute a *citations network* of the internal dependencies with ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get_doc_network_from_project()&labelColor=yellow&color=black)
+Given folders path(s) and/or github repo(s),  `codexplor::construct_corpus` compute *citations networks* of the internal dependencies within programming project(s).
 
 ```{r construct-corpus-and-network, eval = F, echo=TRUE}
 require(codexplor)
 net <- construct_corpus(
   repos =  "tidyverse/stringr")
-        # by default, codexplor deal with R project
+# by default, codexplor deal with R project
 
 get_networkd3_from_igraph(net$files.network)
         # Return an interactive dataviz' from networkD3
@@ -46,7 +46,7 @@ For example, the most-common local dependency inside the tidyverse/stringr repo 
 
 Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the files that contain high-level functions of the project.
 
-      get_networkd3_from_igraph(net$documents.network,  color_outdeg_instead_of_indeg = T)
+      get_networkd3_from_igraph(net$files.network,  color_outdeg_instead_of_indeg = T)
       
 #### Mix Network Analysis and Document-level Metrics
 [WIP]
