--- a/README.Rmd
+++ b/README.Rmd
@@ -102,9 +102,11 @@ knitr::kable(features)
 **Availables features :** 
 
 ![ ](https://img.shields.io/badge/{Construct--corpus}-bold?style=flat&logoColor=black&logoSize=2&label=Read files from github and/or locally&labelColor=black&color=green)
-![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Line-level metrics&labelColor=grey&color=green)
 ![ ](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Compute a network of internal dependencies&labelColor=black&color=green)
 ![ ](https://img.shields.io/badge/{networkD3}-bold?style=flat&logoColor=black&logoSize=2&label=Dataviz from a network&labelColor=black&color=green)
+![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Global text-mining metrics&labelColor=grey&color=orange)
+![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Document-level metrics&labelColor=grey&color=yellow)
+![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Networks metrics&labelColor=grey&color=yellow)
 
 
 </div>
@@ -113,8 +115,6 @@ knitr::kable(features)
   
 **Planned features :** 
 
-![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Document-level metrics&labelColor=grey&color=yellow)
-![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Global text-mining metrics&labelColor=grey&color=orange)
 ![.](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=grey&color=orange)
 ![.](https://img.shields.io/badge/{Analyze}-bold?style=flat&logoColor=black&logoSize=2&label=Function-level metrics&labelColor=grey&color=orange)
 
